# hermes-msteams-bridge

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pypi-publish.yml
hermes_teams_voice/: README.md  __init__.py  audio.py  bridge_server.py  call_session_base.py  call_tools.py  cli.py  config.py  echo_guard.py  elevenlabs_tts.py  group_call_gate.py  handlers.py  hmac_auth.py  meeting_docx.py  plugin.yaml  protocol.py  realtime_tools.py  streaming_audio.py  tools.py  verbal_interrupts.py  viseme_estimate.py  vision_budget.py
hermes_teams_voice/realtime/: __init__.py  openai_client.py
hermes_teams_voice/tests/: test_audio.py  test_bridge_transport.py  test_call_tools.py  test_config_sources.py  test_contract.py  test_dialogue_depth.py  test_group_call_gate.py  test_integration.py  test_protocol_hmac.py  test_realtime_config.py  test_realtime_teardown.py  test_review_fixes.py  test_voice_ux.py
src/hermes_msteams_bridge/: README.md  agent_consult.py  bridge_server.py  cli.py  config.py  expression.py  handlers.py  hmac_auth.py  meeting.py  (+5 more)
tests/: test_audio.py  test_bridge_transport.py  test_call_tools.py  test_caps_allowlist.py  test_config_sources.py  test_contract.py  test_cvi_extras.py  test_dialogue_depth.py  test_expression_viseme.py  test_group_call_gate.py  test_integration.py  test_meeting.py  test_protocol_hmac.py  test_realtime_config.py  test_realtime_teardown.py  test_review_fixes.py  test_streaming_audio.py  test_voice_ux.py
website/: astro.config.mjs  package-lock.json  package.json
(+20 files in other folders)
